# corrscope

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  build_pyinstaller.py  config.py  corrscope.spec  edit-version.sh  install-android.md  lol.py  pyproject.toml  scripts.py  setup.cfg  setup.py
.appveyor/: clear-caches
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  support-feedback.md
corrscope/: __init__.py  __main__.py  channel.py  cli.py  config.py  corrscope.py  designNotes.md  ffmpeg_path.py  layout.py  outputs.py  parallelism.py  renderer.py  spectrum.py  triggers.py  util.py  version.py  wave.py  wave_common.py
corrscope/generate/: __init__.py
corrscope/gui/: __init__.py  data_bind.py  history_file_dlg.py  mainwindow.ui  model_bind.py  translate.pro  ui_mainwindow.py  util.py  version_common.py  view_mainwindow.py  view_stack.py  widgets.py
corrscope/path/: .gitignore
corrscope/settings/: global_prefs.py  paths.py
corrscope/utils/: profile_wrapper.py  scipy_signal.py  scipy_wavfile.py  scipy_windows.py  trigger_util.py  wavprobe.py  windows.py
corrscope/utils/scipy/: signal.py  wavfile.py  windows.py
docs/: index.md
ovgenpy/: __init__.py  __main__.py  channel.py  cli.py  config.py  layout.py  outputs.py  ovgenpy.py  renderer.py  triggers.py  util.py  wave.py
ovgenpy/gui/: __init__.py  __main__.py  channel_widget.ui  data_bind.py  gui.pro  mainwindow.ui  util.py
ovgenpy/renderer/: __init__.py  vispy_canvas.py
ovgenpy/utils/: fourier.py  keyword_dataclasses.py
tests/: benchmark_trigger.py  conftest.py  ffmpeg_subprocess_test.py  test_channel.py  test_cli.py  test_config.py  test_data_bind.py  test_gui.py  test_gui_binding.py  test_layout.py  test_model_bind.py  test_output.py  test_renderer.py  test_trigger.py  test_wave.py  test_windows.py
