# Right now, `pip install [--editable] .` and `pipx install .` work,
# but `pipx install --editable .` fails with message
# "No apps associated with package UNKNOWN or its dependencies."

[build-system]
# "setuptools" is required to make `pip install .` work, due to
# https://github.com/python-poetry/poetry/issues/3153#issuecomment-727196619 .
requires = ["setuptools", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "corrscope"
version = "0.8.0-pre"
description = "Python program to render wave files into oscilloscope views, featuring advanced correlation-based triggering algorithm"
license = "BSD-2-Clause"
authors = ["nyanpasu64 <nyanpasu64@tuta.io>"]
# maintainers =
readme = "README.md"
# homepage =
repository = "https://github.com/corrscope/corrscope/"
documentation = "https://corrscope.github.io/corrscope/"

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "^0.17"
numpy = "^1.15"
click = "^8.0.1"
matplotlib = "^3.1"
attrs = "^21.2.0"
PyQt5 = "^5.15.4"
appdirs = "^1.4.4"
atomicwrites = "^1.4.0"
colorspacious = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-mock = "^3.6.1"
hypothesis = "^6.14.0"
delayed-assert = "^0.3.5"

pyinstaller = "^4.3"

pefile = {version = "^2021.5.24", platform = "win32"}

coverage = "^6"
pytest-cov = "^3"
codecov = "^2.1.11"
pytest-cases = "^3.6.1"
black = "^22"

[tool.poetry.scripts]
corr = 'corrscope.cli:main'

[tool.black]
line-length = 88
py36 = true
exclude = 'utils/scipy/'
